Fixed Scroll View

--- a/MealGenerator/Base.lproj/Main.storyboard
+++ b/MealGenerator/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="22155" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="yqe-fQ-NyN">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="22155" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="NLi-4F-clf">
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22131"/>
@@ -8,7 +8,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Item-->
+        <!--View Controller-->
         <scene sceneID="axf-Ri-rDp">
             <objects>
                 <viewController id="yqe-fQ-NyN" sceneMemberID="viewController">
@@ -16,72 +16,84 @@
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="6kk-4p-0Ew">
-                                <rect key="frame" x="0.0" y="59" width="393" height="710"/>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="sJr-3H-Pdx">
+                                <rect key="frame" x="0.0" y="159" width="393" height="610"/>
                                 <subviews>
-                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="NdJ-I6-cbe">
-                                        <rect key="frame" x="0.0" y="0.0" width="393" height="1500"/>
+                                    <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="B6X-uu-H59">
+                                        <rect key="frame" x="0.0" y="0.0" width="393" height="610"/>
                                         <subviews>
-                                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="250" translatesAutoresizingMaskIntoConstraints="NO" id="cd7-16-jcw">
-                                                <rect key="frame" x="96" y="0.0" width="201" height="1500"/>
+                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="gEU-Rf-6lh">
+                                                <rect key="frame" x="75" y="0.0" width="240" height="1200"/>
                                                 <subviews>
-                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5YT-Lu-1tg">
-                                                        <rect key="frame" x="0.0" y="0.0" width="201" height="187.66666666666666"/>
-                                                        <state key="normal" title="Button"/>
-                                                        <buttonConfiguration key="configuration" style="filled" title="Button"/>
-                                                    </button>
-                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="iQC-CT-Ife">
-                                                        <rect key="frame" x="0.0" y="437.66666666666669" width="201" height="187.33333333333331"/>
-                                                        <state key="normal" title="Button"/>
-                                                        <buttonConfiguration key="configuration" style="filled" title="Button"/>
-                                                    </button>
-                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="36W-4l-3j1">
-                                                        <rect key="frame" x="0.0" y="875" width="201" height="187.66666666666674"/>
-                                                        <state key="normal" title="Button"/>
-                                                        <buttonConfiguration key="configuration" style="filled" title="Button"/>
-                                                    </button>
-                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Dpb-pi-oGZ">
-                                                        <rect key="frame" x="0.0" y="1312.6666666666667" width="201" height="187.33333333333326"/>
-                                                        <state key="normal" title="Button"/>
-                                                        <buttonConfiguration key="configuration" style="filled" title="Button"/>
-                                                    </button>
+                                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="100" translatesAutoresizingMaskIntoConstraints="NO" id="tb9-2F-Q7o">
+                                                        <rect key="frame" x="0.0" y="0.0" width="240" height="1200"/>
+                                                        <subviews>
+                                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Eyf-we-0zA">
+                                                                <rect key="frame" x="0.0" y="0.0" width="240" height="225"/>
+                                                                <state key="normal" title="Button"/>
+                                                                <buttonConfiguration key="configuration" style="filled" title="Button"/>
+                                                            </button>
+                                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="uON-St-Mim">
+                                                                <rect key="frame" x="0.0" y="325" width="240" height="225"/>
+                                                                <state key="normal" title="Button"/>
+                                                                <buttonConfiguration key="configuration" style="filled" title="Button"/>
+                                                            </button>
+                                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eHd-Z0-mBW">
+                                                                <rect key="frame" x="0.0" y="650" width="240" height="225"/>
+                                                                <state key="normal" title="Button"/>
+                                                                <buttonConfiguration key="configuration" style="filled" title="Button"/>
+                                                            </button>
+                                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1hd-SV-gcL">
+                                                                <rect key="frame" x="0.0" y="975" width="240" height="225"/>
+                                                                <state key="normal" title="Button"/>
+                                                                <buttonConfiguration key="configuration" style="filled" title="Button"/>
+                                                            </button>
+                                                        </subviews>
+                                                        <constraints>
+                                                            <constraint firstAttribute="height" constant="1200" id="pgJ-Q4-QLK"/>
+                                                        </constraints>
+                                                    </stackView>
                                                 </subviews>
+                                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                                 <constraints>
-                                                    <constraint firstAttribute="height" constant="1500" id="sJB-Z4-I9u"/>
+                                                    <constraint firstAttribute="trailing" secondItem="tb9-2F-Q7o" secondAttribute="trailing" id="7ik-86-Jbb"/>
+                                                    <constraint firstItem="tb9-2F-Q7o" firstAttribute="width" secondItem="gEU-Rf-6lh" secondAttribute="width" id="Jw6-XM-GkV"/>
+                                                    <constraint firstAttribute="bottom" secondItem="tb9-2F-Q7o" secondAttribute="bottom" id="MfR-QX-g8u"/>
+                                                    <constraint firstItem="tb9-2F-Q7o" firstAttribute="top" secondItem="gEU-Rf-6lh" secondAttribute="top" id="XAN-PJ-u0p"/>
+                                                    <constraint firstItem="tb9-2F-Q7o" firstAttribute="leading" secondItem="gEU-Rf-6lh" secondAttribute="leading" id="YHn-QP-fSS"/>
+                                                    <constraint firstAttribute="height" constant="1200" id="tjx-jk-N6w"/>
                                                 </constraints>
-                                            </stackView>
+                                            </view>
                                         </subviews>
-                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                         <constraints>
-                                            <constraint firstItem="cd7-16-jcw" firstAttribute="top" secondItem="NdJ-I6-cbe" secondAttribute="top" id="Dzc-bV-okh"/>
-                                            <constraint firstAttribute="height" constant="1500" id="OM2-7c-ZPH"/>
-                                            <constraint firstItem="cd7-16-jcw" firstAttribute="leading" secondItem="NdJ-I6-cbe" secondAttribute="leading" constant="96" id="lJQ-cv-ONO"/>
-                                            <constraint firstAttribute="bottom" secondItem="cd7-16-jcw" secondAttribute="bottom" id="sFc-QG-Mj1"/>
-                                            <constraint firstAttribute="trailing" secondItem="cd7-16-jcw" secondAttribute="trailing" constant="96" id="te0-zb-SkV"/>
+                                            <constraint firstItem="gEU-Rf-6lh" firstAttribute="top" secondItem="B6X-uu-H59" secondAttribute="top" id="0S1-0D-DtW"/>
+                                            <constraint firstAttribute="trailing" secondItem="gEU-Rf-6lh" secondAttribute="trailing" constant="75" id="6wY-lO-2Wq"/>
+                                            <constraint firstAttribute="bottom" secondItem="gEU-Rf-6lh" secondAttribute="bottom" id="HGM-bl-vnS"/>
+                                            <constraint firstItem="gEU-Rf-6lh" firstAttribute="leading" secondItem="B6X-uu-H59" secondAttribute="leading" constant="75" id="ZpU-PP-EEM"/>
                                         </constraints>
-                                    </view>
+                                    </scrollView>
                                 </subviews>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <constraints>
-                                    <constraint firstItem="NdJ-I6-cbe" firstAttribute="top" secondItem="6kk-4p-0Ew" secondAttribute="top" id="DAS-G7-0M7"/>
-                                    <constraint firstAttribute="bottom" secondItem="NdJ-I6-cbe" secondAttribute="bottom" id="GhV-yG-GKn"/>
-                                    <constraint firstItem="NdJ-I6-cbe" firstAttribute="leading" secondItem="6kk-4p-0Ew" secondAttribute="leading" id="Jpx-1R-ZJm"/>
-                                    <constraint firstAttribute="trailing" secondItem="NdJ-I6-cbe" secondAttribute="trailing" id="eK1-1Q-K3V"/>
+                                    <constraint firstItem="B6X-uu-H59" firstAttribute="leading" secondItem="sJr-3H-Pdx" secondAttribute="leading" id="0il-W2-fZp"/>
+                                    <constraint firstItem="B6X-uu-H59" firstAttribute="top" secondItem="sJr-3H-Pdx" secondAttribute="top" id="M9r-JQ-CCb"/>
+                                    <constraint firstAttribute="bottom" secondItem="B6X-uu-H59" secondAttribute="bottom" id="TCg-qj-wbL"/>
+                                    <constraint firstAttribute="trailing" secondItem="B6X-uu-H59" secondAttribute="trailing" id="XqW-8x-fVe"/>
                                 </constraints>
-                            </scrollView>
+                            </view>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="Y0m-yR-4mm"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="6kk-4p-0Ew" firstAttribute="top" secondItem="Y0m-yR-4mm" secondAttribute="top" id="DvR-fv-gzY"/>
-                            <constraint firstItem="NdJ-I6-cbe" firstAttribute="width" secondItem="iVd-2z-dm7" secondAttribute="width" id="bGh-kR-L5L"/>
-                            <constraint firstItem="6kk-4p-0Ew" firstAttribute="leading" secondItem="Y0m-yR-4mm" secondAttribute="leading" id="cFu-2q-cG6"/>
-                            <constraint firstItem="6kk-4p-0Ew" firstAttribute="bottom" secondItem="Y0m-yR-4mm" secondAttribute="bottom" id="dbs-TZ-3QX"/>
-                            <constraint firstItem="6kk-4p-0Ew" firstAttribute="trailing" secondItem="Y0m-yR-4mm" secondAttribute="trailing" id="mVO-ep-jqN"/>
-                            <constraint firstItem="NdJ-I6-cbe" firstAttribute="height" secondItem="iVd-2z-dm7" secondAttribute="height" multiplier="1.76056" id="piX-xI-KgR"/>
+                            <constraint firstItem="Y0m-yR-4mm" firstAttribute="bottom" secondItem="sJr-3H-Pdx" secondAttribute="bottom" id="1PN-uC-c3W"/>
+                            <constraint firstItem="sJr-3H-Pdx" firstAttribute="top" secondItem="Y0m-yR-4mm" secondAttribute="top" constant="100" id="5Oe-ut-nbg"/>
+                            <constraint firstItem="sJr-3H-Pdx" firstAttribute="leading" secondItem="Y0m-yR-4mm" secondAttribute="leading" id="DxQ-vr-Lbv"/>
+                            <constraint firstItem="gEU-Rf-6lh" firstAttribute="width" secondItem="iVd-2z-dm7" secondAttribute="width" multiplier="0.610687" id="YWq-uX-M8c"/>
+                            <constraint firstItem="gEU-Rf-6lh" firstAttribute="height" secondItem="iVd-2z-dm7" secondAttribute="height" multiplier="1.40845" id="a96-lw-KMv"/>
+                            <constraint firstItem="Y0m-yR-4mm" firstAttribute="trailing" secondItem="sJr-3H-Pdx" secondAttribute="trailing" id="fJX-GO-ila"/>
                         </constraints>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Item" id="1hP-rY-0bM"/>
-                    <size key="freeformSize" width="393" height="852"/>
+                    <tabBarItem key="tabBarItem" systemItem="favorites" id="1hP-rY-0bM"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Sxf-rC-YIx" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
@@ -239,6 +251,7 @@
                 <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="NLi-4F-clf" sceneMemberID="viewController">
                     <toolbarItems/>
                     <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="nRO-cs-chn">
+                        <rect key="frame" x="0.0" y="0.0" width="1000" height="1000"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </tabBar>
